# rundown

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: CHANGELOG.md  design.md
docs/bugfixes/: 2026-06-26-garmin-activity-data-loss.md
memory/: README.md
memory/auto/daily/: 2026-06-10.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  index.md
memory/auto/execution/: index.md
memory/auto/recovery/: 2026-W26.md  index.md
memory/auto/summaries/: 2026-W26.md  index.md
memory/coaching/: preferences.md
memory/goals/active/: sub230-2026.md
memory/profile/: fitness-assessment.md  fitness-history.md  race-records.md
src/: __init__.py  activity.py  auth.py  coach.py  config.py  exporter.py  fetcher.py  image.py  main.py  mcp_dev.py  mcp_server.py  memory.py  render.py  storage.py
src/providers/: __init__.py  base.py  coros.py  garmin.py
tests/: test_config.py  test_memory.py  test_providers.py  test_render.py
